# aihub-django

./: Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
AIHUB/: settings.py  urls.py
ai_hub/: admin.py  apps.py  models.py  urls.py  views.py
apps/ai_hub/: admin.py  models.py  urls.py  views.py
apps/courses/matlab/: urls.py  views.py
apps/games/: urls.py  views.py
apps/games/static/space_invaders/: space_invaders.apk
apps/games/templates/games/: space_invaders.html
static/styling/assets/: common.css
templates/: Apps.html  Career.html  Events.html  Game.html  Meetups.html  Projects.html  about.html  blog.html  blog_viewer.html  header.html  index.html  links.html
templates/ai_hub/: Apps.html  Career.html  Events.html  Game.html  Meetups.html  Projects.html  about.html  blog.html  blog_viewer.html  career_content.html  courses.html
templates/ai_hub/partials/: footer.html  header.html
templates/courses/matlab/: experiment_desc.html  experiment_viewer.html  footer.html  header.html  home.html  links.html  matlab.html
