[project]
name = "aihub-django"
version = "0.1.0"
description = "AI-HUB"

authors = [
    {name = "Harendra Kasa",email = "harendrakasa@gmail.com"}
]

license = "MIT"
readme = "README.md"
requires-python = ">=3.10, <=3.12"

dependencies = [
    "django (>=4.1,<5.0)",
    "pillow (>=11.2.1,<12.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

